--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -21,7 +21,6 @@
 
 .menu-container.hidden {
   opacity: 0;
-  transition: opacity 250ms ease-in;
   pointer-events: none;
 }
 
@@ -145,7 +144,7 @@ ul.menu-links li a:hover {
 .menu-mobile {
   position: absolute;
   top: 0px;
-  right: 0px;
+  right: calc(env(safe-area-inset-right));
   opacity: 0%;
   visibility: hidden;
   animation: modal-deactivate 250ms ease-in-out;
@@ -171,10 +170,8 @@ ul.menu-links li a:hover {
        screen and (max-height: 774.99px) {
   .menu-mobile {
     position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    bottom: calc(env(safe-area-inset-bottom));
+    left: calc(env(safe-area-inset-left));
     padding: 20px;
   }
 }
@@ -202,7 +199,7 @@ ul.menu-links li a:hover {
   padding: 10px;
   display: flex;
   flex-flow: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -215,10 +212,6 @@ ul.menu-links li a:hover {
   right: 10px;
   border: 2px solid white;
   z-index: 1;
-  transition: all 100ms ease-in-out;
-}
-
-.menu-mobile-button.is-active {
   transition: all 100ms ease-in-out;
 }
 
@@ -252,7 +245,11 @@ ul.menu-links li a:hover {
   align-items: center;
 }
 
-.menu-desktop .menu-item:not(:last-child) {
+.menu-desktop .menu-links {
+  margin-left: 1.5rem;
+}
+
+.menu-desktop .menu-links .menu-item:not(:last-child) {
   margin-right: 1.5rem;
 }
 
@@ -274,30 +271,26 @@ ul.menu-links li a:hover {
   max-height: 45px;
 }
 
+.menu-mobile .menu-links, .menu-mobile .menu-buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
 @media screen and (orientation: portrait) {
   .menu-mobile .menu-links, .menu-mobile .menu-buttons {
-    display: flex;
     flex-flow: column nowrap;
     padding: 0% 20%;
-    justify-content: space-around;
     flex: 1 1 auto;
-    width: 100%;
   }
 
   .menu-mobile .menu-links {
     margin-top: 10%;
   }
-
-  .menu-mobile .menu-buttons {
-    justify-content: space-around;
-  }
 }
 @media screen and (orientation: landscape) {
   .menu-mobile .menu-links, .menu-mobile .menu-buttons {
-    width: 100%;
-    display: flex;
     flex-flow: row nowrap;
-    justify-content: space-around;
     align-items: center;
   }
 
